@@ -65,27 +65,27 @@ public class JavaObject extends Entity {
         value = null;
         String className = s.toString();
         try {
-            value = Class.forName(className).getConstructor(new Class[0]).newInstance(null);
+            value = Class.forName(className).getConstructor().newInstance();
         } catch (SecurityException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: SecurityException: "+ex.getMessage(), s);
         } catch (IllegalArgumentException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: IllegalArgumentException: "+ex.getMessage(), s);
         } catch (NoSuchMethodException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: NoSuchMethodException: "+ex.getMessage(), s);
         } catch (InvocationTargetException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: InvocationTargetException: "+ex.getMessage(), s);
         } catch (InstantiationException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: InstantiationException: "+ex.getMessage(), s);
         } catch (ClassNotFoundException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: ClassNotFoundException: "+ex.getMessage(), s);
         } catch (IllegalAccessException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: IllegalAccessException: "+ex.getMessage(), s);
         }
     }
@@ -96,25 +96,25 @@ public class JavaObject extends Entity {
         try {
             value = Class.forName(className).getConstructor(classes).newInstance(objects);
         } catch (SecurityException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: SecurityException: "+ex.getMessage(), s);
         } catch (IllegalArgumentException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: IllegalArgumentException: "+ex.getMessage(), s);
         } catch (NoSuchMethodException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: NoSuchMethodException: "+ex.getMessage(), s);
         } catch (InvocationTargetException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: InvocationTargetException: "+ex.getMessage(), s);
         } catch (InstantiationException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: InstantiationException: "+ex.getMessage(), s);
         } catch (ClassNotFoundException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: ClassNotFoundException: "+ex.getMessage(), s);
         } catch (IllegalAccessException ex) {
-            Log.record(ex);;
+            Log.record(ex);
             throw new GleamException("new: IllegalAccessException: "+ex.getMessage(), s);
         }
     }
